--- a/components/post-body.module.css
+++ b/components/post-body.module.css
@@ -42,6 +42,14 @@
   .article :global(a) {
     color: theme('colors.primary');
   }
+
+  .article :global(strong) {
+    color: theme('colors.secondary');
+  }
+
+  .article :global(code) {
+    color: theme('colors.accent');
+  }
   
   .article :global(blockquote) {
     color: theme('colors.gray.700');
